# dajare-detector

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
batch/: run_all_eval.sh  run_twitter_eval.sh
conf/: logging.ini  param.ini  twitter_conf.yml
dajare_detector/: __init__.py
dajare_detector/eval/: eval_bert_feature.py  eval_bert_feature_sampling.py  eval_multiple_feature.py  eval_multiple_feature_sampling.py  eval_twitter_data.py
dajare_detector/featurize/: add_co_occurrence_kana_feature.py  add_co_occurrence_roman_feature.py  add_text_tfidf_feature.py  make_bert_feature.py  make_decide_kana_feature.py  make_decide_roman_feature.py  make_sentence_length_feature.py  make_word_count_feature.py
dajare_detector/make_data/: load_aozora_data.py  load_dajare_data.py  make_bert_feature_dataset.py  make_dataset.py  make_multiple_feature_dataset.py  make_sampling_dataset.py  make_twitter_dataset.py
dajare_detector/model/: train_co_occurrence_kana.py  train_co_occurrence_roman.py  train_lgbm.py  train_tfidf.py
dajare_detector/predict/: predict_lgbm.py  predict_twitter_data.py
dajare_detector/preprocessing/: decide_kana_pattern.py  decide_roman_pattern.py  make_kana_pattern.py  make_roman_pattern.py  make_splited_pattern.py  normalize_kana_pattern.py  tokenize_data.py  train_test_val_split.py
dajare_detector/utils/: base_task.py  bert_vectorizer.py  co_occurrence_vectorizer.py  mecab_tokenizer.py
data/: dajare_sample.csv
shareka/: shareka_v1.py  shareka_v2.py  shareka_v3.py  shareka_v4.py
twitter/: dajare_detector.py  twitter_crawler.py
